Migrate off deprecated APIs where a replacement exists
Replaces deprecated API use with its intended successor, leaving behavior
unchanged. Several of these substitutions are subtler than they look, so each
was checked rather than assumed:

- ByteUtils.toUnsigned -> unsignedPromote in Char/Short/LongUtils, matching
  IntegerUtils, which had already been migrated. The two promotions agree for
  all 256 byte values.

- Class.newInstance() -> getDeclaredConstructor().newInstance(), in seven
  places. Reflective construction wraps whatever the constructor threw, where
  Class.newInstance() let it propagate. Four sites only log inside
  catch(Exception) and are unaffected; the other three inspect the exception's
  type or let it escape, and so unwrap InvocationTargetException to preserve
  the old behavior: MLog.findByClassnames' MLogInitializationException
  reporting, ReferenceableUtils' NamingException test, and
  JavaBeanObjectFactory.createBlankInstance' propagation.

- org.xml.sax.HandlerBase / AttributeList -> DefaultHandler / Attributes in
  XmlSchema. The handler reads qName rather than localName because
  SAXParserFactory is namespace unaware by default, which leaves localName
  empty. Attribute names are unaffected: both accessors agree when unprefixed.

- SchemaManager onto com.mchange.v2.cmdline. The old and new parsers agree
  across the command line shapes SchemaManager accepts. CommandLineUtils.parse
  documents null as "no switch takes an argument" but throws NPE on it, so an
  empty array is passed instead.

- com.mchange.lang.ArrayUtils.hashAll -> java.util.Arrays.hashCode, and the
  deprecated v1.util.MapUtils -> Map's own equals/hashCode. Hash values change
  (MapUtils xor'd entry hashes where Map.hashCode sums them); the equals and
  hashCode contract holds, and Map.equals additionally tolerates nulls.

- codegen.IndentedWriter -> io.IndentedWriter in CodegenUtils and
  DelegatorGenerator. Generated output is unchanged for a plain Writer. This
  als